[gd_scene load_steps=5 format=3 uid="uid://cw8a0wplbe4qw"]

[ext_resource type="PackedScene" uid="uid://dehqcb6wmht8h" path="res://Editor/Start/npc_trigger.tscn" id="1_k6np7"]
[ext_resource type="Script" path="res://Editor/Start/start.gd" id="1_wgvu1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0bgg"]
bg_color = Color(0.6, 0.6, 0.6, 0.607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 2
border_blend = true

[sub_resource type="Theme" id="Theme_uiffq"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_l0bgg")

[node name="Start" type="PanelContainer"]
custom_minimum_size = Vector2(0, 400)
theme = SubResource("Theme_uiffq")
script = ExtResource("1_wgvu1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox_NPC" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Start via NPC"

[node name="NPC Trigger" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_k6np7")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox_Item" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start via Item"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Item"

[node name="OptionItem" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox_Location" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start via Location"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Marker"

[node name="OptionLocation" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Description"

[node name="Description" type="TextEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Description..."

[connection signal="pressed" from="MarginContainer/VBoxContainer/CheckBox_NPC" to="." method="_on_check_box_npc_pressed"]
[connection signal="press_edit_dialogue" from="MarginContainer/VBoxContainer/NPC Trigger" to="." method="_on_npc_trigger_press_edit_dialogue"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CheckBox_Item" to="." method="_on_check_box_item_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CheckBox_Location" to="." method="_on_check_box_location_pressed"]
